// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QR test > generate should work 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  228,
  0,
  0,
  0,
  228,
  8,
  6,
  0,
  0,
  0,
  136,
  87,
  136,
  141,
  0,
  0,
  0,
  6,
  98,
  75,
  71,
  68,
  0,
  255,
  0,
  255,
  0,
  255,
  160,
  189,
  167,
  147,
  0,
  0,
  10,
  126,
  73,
  68,
  65,
  84,
  120,
  156,
  237,
  221,
  61,
  142,
  20,
  73,
  16,
  134,
  225,
  236,
  213,
  128,
  0,
  27,
  97,
  1,
  6,
  220,
  1,
  135,
  19,
  96,
  113,
  10,
  108,
  206,
  196,
  21,
  56,
  6,
  46,
  18,
  88,
  141,
  49,
  224,
  97,
  96,
  33,
  28,
  164,
  94,
  3,
  177,
  210,
  102,
  77,
  19,
  27,
  19,
  63,
  249,
  213,
  236,
  251,
  72,
  56,
  219,
  85,
  89,
  217,
  213,
  19,
  155,
  21,
  149,
  127,
  135,
  49,
  198,
  105,
  52,
  58,
  157,
  98,
  151,
  59,
  28,
  14,
  73,
  53,
  249,
  197,
  91,
  31,
  239,
  245,
  173,
  242,
  231,
  242,
  162,
  245,
  137,
  222,
  95,
  171,
  252,
  153,
  218,
  245,
  170,
  127,
  159,
  106,
  127,
  181,
  94,
  13,
  192,
  31,
  17,
  144,
  128,
  16,
  2,
  18,
  16,
  114,
  49,
  255,
  135,
  238,
  156,
  192,
  123,
  126,
  117,
  253,
  230,
  242,
  179,
  175,
  239,
  45,
  47,
  59,
  135,
  241,
  94,
  95,
  61,
  71,
  244,
  214,
  63,
  122,
  63,
  171,
  239,
  7,
  45,
  36,
  32,
  132,
  128,
  4,
  132,
  16,
  144,
  128,
  144,
  77,
  14,
  57,
  203,
  238,
  215,
  137,
  242,
  230,
  32,
  217,
  199,
  71,
  203,
  83,
  171,
  159,
  87,
  52,
  167,
  206,
  254,
  62,
  209,
  242,
  163,
  178,
  227,
  131,
  22,
  18,
  16,
  66,
  64,
  2,
  66,
  8,
  72,
  64,
  136,
  153,
  67,
  238,
  93,
  117,
  142,
  211,
  61,
  246,
  52,
  187,
  126,
  221,
  99,
  71,
  173,
  242,
  163,
  57,
  183,
  183,
  124,
  53,
  180,
  144,
  128,
  16,
  2,
  18,
  16,
  66,
  64,
  2,
  66,
  228,
  115,
  72,
  111,
  14,
  147,
  61,
  191,
  208,
  107,
  245,
  88,
  85,
  111,
  249,
  217,
  57,
  108,
  117,
  63,
  163,
  117,
  126,
  117,
  63,
  120,
  53,
  90,
  72,
  64,
  8,
  1,
  9,
  8,
  33,
  32,
  1,
  33,
  102,
  14,
  185,
  122,
  108,
  170,
  165,
  186,
  126,
  213,
  99,
  79,
  189,
  231,
  171,
  173,
  185,
  83,
  221,
  143,
  24,
  213,
  253,
  253,
  163,
  104,
  33,
  1,
  33,
  4,
  36,
  32,
  132,
  128,
  4,
  132,
  108,
  114,
  200,
  213,
  99,
  253,
  162,
  57,
  137,
  218,
  231,
  179,
  236,
  156,
  170,
  58,
  199,
  220,
  219,
  231,
  94,
  106,
  253,
  198,
  180,
  144,
  128,
  16,
  2,
  18,
  16,
  66,
  64,
  2,
  66,
  14,
  167,
  157,
  13,
  254,
  91,
  189,
  198,
  79,
  119,
  191,
  98,
  245,
  216,
  220,
  234,
  126,
  214,
  236,
  239,
  31,
  45,
  191,
  123,
  175,
  18,
  47,
  90,
  72,
  64,
  8,
  1,
  9,
  8,
  33,
  32,
  1,
  33,
  23,
  217,
  57,
  77,
  117,
  14,
  18,
  237,
  135,
  90,
  157,
  67,
  84,
  231,
  84,
  213,
  188,
  191,
  255,
  234,
  191,
  23,
  175,
  238,
  189,
  94,
  102,
  180,
  144,
  128,
  16,
  2,
  18,
  16,
  66,
  64,
  2,
  66,
  46,
  178,
  115,
  198,
  234,
  126,
  181,
  89,
  118,
  206,
  85,
  61,
  54,
  117,
  245,
  216,
  87,
  175,
  104,
  142,
  216,
  93,
  31,
  235,
  248,
  234,
  242,
  188,
  216,
  31,
  18,
  16,
  70,
  64,
  2,
  66,
  8,
  72,
  64,
  72,
  120,
  93,
  214,
  213,
  57,
  78,
  245,
  222,
  27,
  213,
  243,
  33,
  173,
  235,
  91,
  186,
  215,
  157,
  245,
  138,
  246,
  51,
  102,
  159,
  95,
  157,
  243,
  71,
  207,
  167,
  133,
  4,
  132,
  16,
  144,
  128,
  16,
  2,
  18,
  16,
  114,
  24,
  99,
  184,
  30,
  138,
  187,
  215,
  41,
  245,
  150,
  183,
  186,
  95,
  201,
  82,
  189,
  255,
  97,
  84,
  118,
  191,
  226,
  234,
  253,
  28,
  171,
  115,
  190,
  236,
  251,
  69,
  11,
  9,
  8,
  33,
  32,
  1,
  33,
  4,
  36,
  32,
  100,
  211,
  15,
  25,
  221,
  47,
  112,
  150,
  221,
  239,
  165,
  182,
  31,
  224,
  234,
  253,
  17,
  189,
  245,
  241,
  30,
  191,
  122,
  205,
  156,
  108,
  86,
  253,
  186,
  231,
  83,
  206,
  104,
  33,
  1,
  33,
  4,
  36,
  32,
  132,
  128,
  4,
  132,
  152,
  99,
  89,
  171,
  231,
  155,
  237,
  125,
  175,
  134,
  234,
  249,
  156,
  179,
  232,
  239,
  17,
  29,
  187,
  25,
  157,
  15,
  153,
  61,
  246,
  215,
  42,
  191,
  122,
  62,
  236,
  44,
  122,
  60,
  45,
  36,
  32,
  132,
  128,
  4,
  132,
  16,
  144,
  128,
  144,
  240,
  124,
  200,
  213,
  251,
  39,
  70,
  63,
  143,
  230,
  184,
  213,
  99,
  53,
  179,
  199,
  98,
  238,
  109,
  13,
  163,
  236,
  126,
  202,
  238,
  177,
  185,
  222,
  227,
  105,
  33,
  1,
  33,
  4,
  36,
  32,
  132,
  128,
  4,
  132,
  152,
  57,
  100,
  247,
  26,
  50,
  209,
  156,
  71,
  109,
  221,
  210,
  89,
  247,
  252,
  205,
  236,
  249,
  149,
  171,
  215,
  173,
  93,
  61,
  191,
  181,
  122,
  126,
  36,
  45,
  36,
  32,
  132,
  128,
  4,
  132,
  16,
  144,
  128,
  144,
  195,
  105,
  122,
  200,
  93,
  189,
  166,
  138,
  87,
  247,
  88,
  208,
  104,
  249,
  150,
  238,
  53,
  139,
  170,
  191,
  111,
  180,
  223,
  178,
  123,
  13,
  165,
  213,
  231,
  211,
  66,
  2,
  66,
  8,
  72,
  64,
  8,
  1,
  9,
  8,
  49,
  215,
  212,
  81,
  91,
  23,
  179,
  123,
  126,
  91,
  246,
  252,
  184,
  238,
  249,
  118,
  150,
  238,
  28,
  110,
  245,
  239,
  91,
  253,
  142,
  36,
  122,
  63,
  104,
  33,
  1,
  33,
  4,
  36,
  32,
  132,
  128,
  4,
  132,
  92,
  120,
  199,
  146,
  102,
  247,
  139,
  173,
  222,
  91,
  99,
  230,
  29,
  75,
  91,
  189,
  6,
  80,
  245,
  126,
  146,
  213,
  253,
  196,
  217,
  57,
  101,
  247,
  186,
  183,
  221,
  127,
  159,
  180,
  144,
  128,
  16,
  2,
  18,
  16,
  66,
  64,
  2,
  66,
  204,
  177,
  172,
  179,
  236,
  189,
  34,
  178,
  251,
  141,
  170,
  215,
  101,
  85,
  27,
  251,
  89,
  125,
  127,
  171,
  175,
  55,
  91,
  189,
  31,
  101,
  20,
  99,
  89,
  129,
  27,
  132,
  128,
  4,
  132,
  16,
  144,
  128,
  144,
  77,
  14,
  185,
  57,
  32,
  121,
  44,
  168,
  101,
  245,
  26,
  58,
  221,
  251,
  25,
  86,
  143,
  189,
  236,
  158,
  223,
  186,
  58,
  167,
  181,
  202,
  139,
  202,
  206,
  177,
  25,
  203,
  10,
  8,
  35,
  32,
  1,
  33,
  4,
  36,
  32,
  228,
  48,
  198,
  248,
  215,
  67,
  109,
  247,
  51,
  190,
  85,
  126,
  84,
  245,
  124,
  55,
  239,
  249,
  94,
  213,
  57,
  139,
  117,
  61,
  75,
  246,
  88,
  218,
  234,
  53,
  146,
  170,
  239,
  159,
  247,
  250,
  51,
  90,
  72,
  64,
  8,
  1,
  9,
  8,
  33,
  32,
  1,
  33,
  23,
  222,
  103,
  232,
  232,
  94,
  14,
  234,
  123,
  47,
  100,
  207,
  111,
  156,
  85,
  239,
  149,
  98,
  213,
  199,
  187,
  223,
  101,
  247,
  252,
  201,
  40,
  181,
  189,
  70,
  44,
  115,
  121,
  180,
  144,
  128,
  16,
  2,
  18,
  16,
  66,
  64,
  2,
  66,
  220,
  99,
  89,
  45,
  213,
  57,
  226,
  234,
  177,
  157,
  55,
  173,
  31,
  118,
  245,
  154,
  60,
  221,
  99,
  85,
  187,
  247,
  246,
  160,
  31,
  18,
  216,
  49,
  115,
  7,
  101,
  244,
  234,
  94,
  229,
  236,
  220,
  245,
  212,
  223,
  166,
  222,
  84,
  180,
  144,
  128,
  144,
  240,
  186,
  172,
  213,
  253,
  84,
  106,
  107,
  226,
  100,
  251,
  249,
  243,
  231,
  184,
  188,
  188,
  92,
  93,
  141,
  49,
  198,
  24,
  143,
  31,
  63,
  30,
  23,
  23,
  255,
  126,
  104,
  138,
  246,
  139,
  174,
  238,
  215,
  172,
  94,
  87,
  56,
  187,
  31,
  147,
  71,
  214,
  197,
  46,
  47,
  47,
  199,
  211,
  167,
  79,
  87,
  87,
  99,
  140,
  49,
  198,
  241,
  120,
  28,
  79,
  158,
  60,
  89,
  93,
  141,
  255,
  53,
  30,
  89,
  1,
  33,
  4,
  36,
  32,
  100,
  51,
  150,
  117,
  214,
  189,
  38,
  78,
  247,
  252,
  61,
  245,
  126,
  211,
  85,
  126,
  215,
  179,
  123,
  255,
  200,
  236,
  253,
  55,
  189,
  231,
  123,
  101,
  255,
  158,
  180,
  144,
  128,
  16,
  2,
  114,
  167,
  158,
  61,
  123,
  54,
  190,
  126,
  253,
  122,
  229,
  191,
  87,
  175,
  94,
  173,
  174,
  30,
  174,
  137,
  183,
  172,
  59,
  117,
  235,
  214,
  173,
  113,
  255,
  254,
  253,
  43,
  63,
  187,
  119,
  239,
  94,
  115,
  109,
  144,
  197,
  12,
  72,
  239,
  252,
  185,
  168,
  238,
  53,
  95,
  186,
  215,
  168,
  249,
  125,
  188,
  122,
  46,
  249,
  95,
  127,
  215,
  234,
  177,
  176,
  213,
  251,
  67,
  122,
  235,
  95,
  157,
  163,
  242,
  200,
  10,
  8,
  33,
  32,
  1,
  33,
  4,
  36,
  32,
  36,
  253,
  165,
  78,
  245,
  186,
  154,
  209,
  242,
  188,
  229,
  71,
  251,
  185,
  246,
  58,
  107,
  226,
  186,
  253,
  144,
  215,
  189,
  206,
  111,
  209,
  53,
  134,
  212,
  251,
  181,
  173,
  227,
  121,
  203,
  42,
  234,
  112,
  56,
  140,
  187,
  119,
  239,
  158,
  253,
  252,
  206,
  157,
  59,
  103,
  63,
  187,
  125,
  251,
  246,
  31,
  223,
  180,
  254,
  248,
  241,
  67,
  254,
  165,
  210,
  255,
  149,
  185,
  98,
  192,
  230,
  132,
  230,
  22,
  109,
  117,
  11,
  25,
  45,
  223,
  186,
  238,
  167,
  79,
  159,
  174,
  28,
  92,
  254,
  240,
  225,
  195,
  241,
  249,
  243,
  231,
  148,
  107,
  205,
  30,
  61,
  122,
  52,
  190,
  124,
  249,
  178,
  249,
  239,
  87,
  13,
  46,
  175,
  110,
  33,
  103,
  221,
  43,
  58,
  204,
  86,
  183,
  144,
  228,
  144,
  128,
  144,
  205,
  124,
  200,
  108,
  221,
  123,
  55,
  88,
  170,
  247,
  106,
  184,
  233,
  143,
  130,
  213,
  251,
  63,
  90,
  162,
  231,
  103,
  247,
  131,
  90,
  199,
  91,
  216,
  31,
  18,
  16,
  70,
  64,
  2,
  66,
  8,
  72,
  64,
  136,
  185,
  183,
  199,
  172,
  250,
  173,
  149,
  247,
  252,
  213,
  107,
  178,
  84,
  229,
  140,
  223,
  191,
  127,
  31,
  111,
  222,
  188,
  57,
  251,
  249,
  131,
  7,
  15,
  198,
  139,
  23,
  47,
  174,
  252,
  236,
  221,
  187,
  119,
  227,
  227,
  199,
  143,
  127,
  44,
  59,
  75,
  118,
  63,
  109,
  246,
  88,
  213,
  232,
  241,
  237,
  253,
  172,
  167,
  201,
  248,
  181,
  129,
  235,
  217,
  127,
  214,
  241,
  94,
  222,
  235,
  121,
  207,
  247,
  214,
  191,
  250,
  251,
  206,
  142,
  199,
  163,
  251,
  59,
  140,
  49,
  78,
  207,
  159,
  63,
  63,
  91,
  230,
  235,
  215,
  175,
  175,
  85,
  230,
  241,
  120,
  12,
  127,
  223,
  235,
  92,
  55,
  242,
  251,
  84,
  255,
  222,
  209,
  239,
  235,
  189,
  159,
  60,
  178,
  2,
  66,
  8,
  72,
  64,
  136,
  185,
  46,
  171,
  250,
  216,
  205,
  185,
  190,
  179,
  234,
  253,
  15,
  175,
  91,
  158,
  85,
  239,
  189,
  168,
  238,
  167,
  179,
  120,
  175,
  103,
  253,
  62,
  213,
  123,
  149,
  88,
  104,
  33,
  1,
  33,
  4,
  36,
  32,
  132,
  128,
  4,
  132,
  152,
  235,
  178,
  90,
  207,
  196,
  217,
  159,
  119,
  203,
  30,
  203,
  218,
  245,
  253,
  62,
  124,
  248,
  48,
  94,
  190,
  124,
  121,
  229,
  103,
  239,
  223,
  191,
  47,
  185,
  230,
  85,
  188,
  191,
  111,
  244,
  126,
  68,
  115,
  212,
  236,
  156,
  215,
  155,
  51,
  90,
  199,
  51,
  31,
  114,
  167,
  190,
  125,
  251,
  54,
  222,
  190,
  125,
  187,
  186,
  26,
  72,
  198,
  35,
  43,
  32,
  132,
  128,
  4,
  132,
  132,
  251,
  33,
  187,
  215,
  197,
  140,
  138,
  246,
  19,
  89,
  229,
  89,
  246,
  178,
  46,
  235,
  57,
  213,
  253,
  180,
  217,
  247,
  37,
  154,
  243,
  103,
  215,
  135,
  21,
  3,
  128,
  29,
  33,
  32,
  1,
  33,
  135,
  241,
  107,
  212,
  249,
  63,
  178,
  31,
  233,
  212,
  68,
  95,
  83,
  71,
  205,
  143,
  172,
  234,
  91,
  154,
  87,
  15,
  117,
  203,
  126,
  164,
  237,
  94,
  228,
  202,
  186,
  190,
  101,
  83,
  191,
  83,
  176,
  6,
  171,
  247,
  15,
  92,
  61,
  31,
  210,
  58,
  126,
  175,
  186,
  198,
  224,
  86,
  255,
  253,
  100,
  231,
  172,
  209,
  223,
  159,
  28,
  18,
  216,
  17,
  6,
  6,
  44,
  150,
  61,
  131,
  189,
  122,
  55,
  47,
  212,
  162,
  133,
  4,
  132,
  108,
  114,
  200,
  234,
  255,
  131,
  70,
  159,
  217,
  171,
  255,
  143,
  159,
  125,
  190,
  87,
  118,
  78,
  229,
  45,
  223,
  82,
  253,
  247,
  80,
  93,
  94,
  244,
  9,
  195,
  18,
  173,
  63,
  45,
  36,
  32,
  132,
  128,
  4,
  132,
  16,
  144,
  128,
  16,
  247,
  91,
  214,
  236,
  103,
  240,
  234,
  156,
  41,
  123,
  108,
  174,
  90,
  142,
  150,
  125,
  127,
  45,
  171,
  115,
  86,
  75,
  117,
  206,
  24,
  29,
  251,
  106,
  221,
  15,
  90,
  72,
  64,
  8,
  1,
  9,
  8,
  33,
  32,
  1,
  33,
  238,
  28,
  82,
  109,
  47,
  133,
  213,
  35,
  75,
  84,
  214,
  121,
  61,
  119,
  188,
  247,
  115,
  171,
  62,
  209,
  227,
  171,
  251,
  81,
  171,
  199,
  18,
  103,
  175,
  9,
  196,
  254,
  144,
  128,
  48,
  2,
  18,
  16,
  66,
  64,
  2,
  66,
  54,
  57,
  100,
  245,
  252,
  191,
  238,
  53,
  89,
  178,
  199,
  38,
  118,
  79,
  216,
  237,
  86,
  157,
  195,
  102,
  255,
  254,
  222,
  242,
  179,
  235,
  23,
  189,
  63,
  204,
  135,
  4,
  132,
  17,
  144,
  128,
  16,
  2,
  18,
  16,
  98,
  206,
  135,
  156,
  173,
  222,
  203,
  163,
  123,
  175,
  133,
  238,
  53,
  129,
  170,
  115,
  74,
  245,
  177,
  161,
  94,
  221,
  57,
  101,
  245,
  59,
  22,
  90,
  72,
  64,
  8,
  1,
  9,
  8,
  33,
  32,
  1,
  33,
  230,
  66,
  201,
  155,
  19,
  196,
  198,
  166,
  174,
  94,
  227,
  165,
  186,
  223,
  179,
  59,
  199,
  157,
  85,
  231,
  156,
  81,
  171,
  22,
  186,
  174,
  42,
  159,
  22,
  18,
  16,
  66,
  64,
  2,
  66,
  8,
  72,
  64,
  136,
  123,
  179,
  29,
  181,
  61,
  217,
  87,
  231,
  104,
  179,
  238,
  126,
  216,
  238,
  189,
  41,
  188,
  229,
  121,
  173,
  158,
  15,
  185,
  122,
  13,
  35,
  90,
  72,
  64,
  8,
  1,
  9,
  8,
  33,
  32,
  1,
  33,
  155,
  28,
  210,
  82,
  157,
  35,
  205,
  170,
  247,
  139,
  172,
  222,
  235,
  193,
  42,
  207,
  170,
  79,
  247,
  94,
  23,
  221,
  247,
  187,
  59,
  103,
  83,
  155,
  95,
  59,
  163,
  133,
  4,
  132,
  16,
  144,
  128,
  16,
  2,
  18,
  16,
  146,
  190,
  131,
  114,
  247,
  94,
  29,
  150,
  213,
  57,
  102,
  118,
  14,
  234,
  173,
  143,
  119,
  47,
  147,
  213,
  253,
  204,
  150,
  213,
  123,
  193,
  84,
  143,
  237,
  165,
  133,
  4,
  132,
  16,
  144,
  128,
  16,
  2,
  18,
  16,
  98,
  246,
  67,
  86,
  143,
  21,
  173,
  214,
  61,
  31,
  176,
  218,
  234,
  249,
  140,
  171,
  199,
  122,
  90,
  170,
  251,
  9,
  45,
  209,
  250,
  211,
  66,
  2,
  66,
  8,
  72,
  64,
  8,
  1,
  9,
  8,
  185,
  80,
  219,
  207,
  176,
  122,
  29,
  208,
  108,
  221,
  99,
  63,
  171,
  231,
  171,
  122,
  143,
  175,
  94,
  215,
  212,
  91,
  158,
  117,
  188,
  165,
  123,
  239,
  23,
  246,
  246,
  0,
  132,
  17,
  144,
  128,
  16,
  2,
  18,
  16,
  18,
  158,
  15,
  185,
  41,
  80,
  124,
  190,
  93,
  247,
  216,
  73,
  203,
  234,
  243,
  173,
  242,
  102,
  221,
  243,
  95,
  187,
  247,
  6,
  233,
  158,
  15,
  73,
  14,
  9,
  8,
  35,
  32,
  1,
  33,
  4,
  36,
  32,
  100,
  51,
  31,
  50,
  59,
  39,
  241,
  62,
  147,
  171,
  245,
  123,
  121,
  175,
  223,
  173,
  122,
  190,
  97,
  118,
  63,
  104,
  84,
  245,
  124,
  86,
  175,
  236,
  156,
  146,
  22,
  18,
  16,
  66,
  64,
  2,
  66,
  8,
  72,
  64,
  136,
  187,
  31,
  210,
  210,
  157,
  227,
  85,
  247,
  115,
  118,
  143,
  181,
  237,
  158,
  175,
  169,
  182,
  87,
  70,
  247,
  253,
  234,
  94,
  215,
  213,
  66,
  11,
  9,
  8,
  33,
  32,
  1,
  33,
  4,
  36,
  32,
  228,
  112,
  42,
  238,
  56,
  234,
  94,
  215,
  242,
  166,
  149,
  87,
  109,
  245,
  88,
  216,
  104,
  125,
  86,
  239,
  103,
  105,
  241,
  222,
  15,
  90,
  72,
  64,
  8,
  1,
  9,
  8,
  33,
  32,
  1,
  33,
  233,
  123,
  123,
  204,
  86,
  143,
  37,
  204,
  238,
  55,
  204,
  174,
  175,
  215,
  234,
  28,
  124,
  230,
  189,
  223,
  221,
  243,
  39,
  87,
  207,
  111,
  244,
  30,
  79,
  11,
  9,
  8,
  33,
  32,
  1,
  33,
  4,
  36,
  32,
  36,
  125,
  44,
  171,
  165,
  122,
  77,
  27,
  47,
  245,
  53,
  115,
  188,
  229,
  173,
  222,
  75,
  37,
  106,
  245,
  94,
  50,
  213,
  247,
  215,
  58,
  159,
  22,
  18,
  16,
  66,
  64,
  2,
  66,
  8,
  72,
  64,
  136,
  185,
  166,
  78,
  84,
  246,
  30,
  247,
  222,
  242,
  189,
  229,
  117,
  127,
  255,
  238,
  253,
  43,
  179,
  251,
  97,
  187,
  239,
  215,
  172,
  59,
  231,
  139,
  30,
  111,
  93,
  159,
  22,
  18,
  16,
  66,
  64,
  2,
  66,
  8,
  72,
  64,
  136,
  57,
  150,
  117,
  245,
  51,
  183,
  117,
  252,
  234,
  156,
  199,
  226,
  93,
  135,
  54,
  186,
  110,
  173,
  165,
  186,
  95,
  215,
  43,
  58,
  22,
  180,
  122,
  255,
  201,
  108,
  244,
  67,
  2,
  59,
  66,
  64,
  2,
  66,
  8,
  72,
  64,
  72,
  249,
  124,
  72,
  75,
  246,
  51,
  251,
  234,
  249,
  113,
  171,
  115,
  88,
  245,
  177,
  189,
  222,
  235,
  175,
  158,
  255,
  217,
  61,
  159,
  150,
  22,
  18,
  16,
  66,
  64,
  2,
  66,
  8,
  72,
  64,
  200,
  242,
  28,
  178,
  58,
  199,
  243,
  30,
  159,
  221,
  143,
  154,
  189,
  206,
  104,
  247,
  154,
  52,
  209,
  227,
  173,
  243,
  189,
  199,
  103,
  255,
  189,
  84,
  247,
  235,
  122,
  175,
  79,
  11,
  9,
  8,
  33,
  32,
  1,
  33,
  4,
  36,
  32,
  196,
  204,
  33,
  87,
  143,
  253,
  180,
  172,
  94,
  115,
  39,
  170,
  58,
  7,
  91,
  125,
  63,
  187,
  215,
  16,
  242,
  214,
  39,
  90,
  126,
  246,
  249,
  180,
  144,
  128,
  16,
  2,
  18,
  16,
  66,
  64,
  2,
  66,
  54,
  57,
  100,
  247,
  58,
  158,
  213,
  253,
  142,
  213,
  123,
  214,
  91,
  186,
  115,
  22,
  239,
  245,
  179,
  203,
  183,
  202,
  243,
  158,
  223,
  189,
  134,
  79,
  245,
  59,
  19,
  246,
  246,
  0,
  118,
  132,
  128,
  4,
  132,
  16,
  144,
  128,
  144,
  191,
  1,
  123,
  86,
  52,
  78,
  58,
  145,
  86,
  82,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`QR test > generateQRCodeContent should work 1`] = `
"SPC
0200
1
CH2830000011623852950
K
bbit gmbh
Rainweg 10
3612 Steffisburg


CH







100.00
CHF
S
Test AG
Musterstrasse
1
3600
Thun
CH
QRR
000000000000000012312312316
Test message
EPD
Test billing information

"
`;

exports[`QR test > generateQRCodeContent should work 2`] = `
"SPC
0200
1
CH2830000011623852950
S
Test AG
Musterstrasse
1
3600
Thun
CH







100.00
CHF
K
bbit gmbh
Rainweg 10
3612 Steffisburg


CH
QRR
000000000000000012312312316
Test message
EPD
Test billing information

"
`;

exports[`QR test > generateQRCodeContent should work 3`] = `
"SPC
0200
1
CH2830000011623852950
K
bbit gmbh
Rainweg 10
3612 Steffisburg


CH







100.00
CHF
S
Test AG
Musterstrasse
1
3600
Thun
CH
QRR
000000000000000012312312316

EPD

"
`;
